<resources>
    <string name="app_name">DinDin</string>

    <string name="data_despesa">Data da Despesa</string>
    <string name="valor_despesa">Valor da Despesa</string>
    <string name="descricao_despesa_despesa">Descrição</string>


    <string name="login">E-mail</string>
    <string name="password">Senha</string>
    <string name="logar">Entrar</string>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>



</resources>
